--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -27,8 +27,8 @@ disabled = #707880
 
 [bar/example]
 width = 100%
-height = 24pt
-radius = 6
+height = 40pt
+radius = 10
 
 ; dpi = 96
 
@@ -48,7 +48,7 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = monospace;2
+font-0 = "JetBrainsMono Nerd Font:size=16;5"
 
 modules-left = xworkspaces xwindow
 modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
@@ -145,11 +145,6 @@ format-connected = <label-connected>
 format-disconnected = <label-disconnected>
 label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
 
-[module/wlan]
-inherit = network-base
-interface-type = wireless
-label-connected = %{F#F0C674}%ifname%%{F-} %essid% %local_ip%
-
 [module/eth]
 inherit = network-base
 interface-type = wired
@@ -159,8 +154,8 @@ label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
 type = internal/date
 interval = 1
 
-date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
+date-alt = %H:%M
+date = %Y-%m-%d %H:%M:%S
 
 label = %date%
 label-foreground = ${colors.primary}
