--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -51,7 +51,7 @@ separator-foreground = ${colors.disabled}
 font-0 = "JetBrainsMono Nerd Font:size=16;5"
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan eth date
+modules-right = filesystem pulseaudio xkeyboard memory cpu eth date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
