enabled shell_integration + switched to default theme

--- a/kitty.conf
+++ b/kitty.conf
@@ -7,3 +7,11 @@ font_size 12
 map f1 pipe @ansi overlay fzf
 
 enable_audio_bell no
+
+shell_integration enabled
+
+
+# BEGIN_KITTY_THEME
+# Default
+include current-theme.conf
+# END_KITTY_THEME
